test/corpus/compound_literals.txt
==================
Compound Literals
==================

let a = ([1, 2] as Int[])[0]
let b = [1, 2]           // OK, 'b' has type 'Int[2]'
let c = [1, 2.0]         // error: '2.0' does not have type 'Int'
let d: Float64[n] = [1, 2] // OK, 'd' has type 'Float64[2]'
let e: Int[] = []        // warning: zero-length buffer

let a = [:]                // error: cannot infer empty map type without context
let b = [1: "a", 2: "b"]   // OK, 'b' has type 'Map<Int, String>'
let c = [1: "a", 2.0: "b"] // error: '2.0' does not have type 'Int'
let d: Map<Float64, String> = [1: "a", 2.0: "b"] // OK
let e: Map<Float64, String> = [:] // OK

---

(source_file
  (binding_decl
    (binding_pattern
      (binding_introducer)
      (identifier))
    (subscript_call_expr
      (tuple_expr
        (tuple_expr_element
          (type_casting_expr
            (buffer_literal
              (integer_literal
                (decimal_literal))
              (integer_literal
                (decimal_literal)))
            (array_type_expr
              (name_type_expr
                (selector
                  (identifier_expr
                    (identifier))))))))
      (call_argument
        (integer_literal
          (decimal_literal)))))
  (binding_decl
    (binding_pattern
      (binding_introducer)
      (identifier))
    (buffer_literal
      (integer_literal
        (decimal_literal))
      (integer_literal
        (decimal_literal))))
  (single_line_comment)
  (binding_decl
    (binding_pattern
      (binding_introducer)
      (identifier))
    (buffer_literal
      (integer_literal
        (decimal_literal))
      (floating_point_literal)))
  (single_line_comment)
  (binding_decl
    (binding_pattern
      (binding_introducer)
      (identifier)
      (array_type_expr
        (name_type_expr
          (selector
            (identifier_expr
              (identifier))))
        (selector_expr
          (selector
            (identifier_expr
              (identifier))))))
    (buffer_literal
      (integer_literal
        (decimal_literal))
      (integer_literal
        (decimal_literal))))
  (single_line_comment)
  (binding_decl
    (binding_pattern
      (binding_introducer)
      (identifier)
      (array_type_expr
        (name_type_expr
          (selector
            (identifier_expr
              (identifier))))))
    (buffer_literal))
  (single_line_comment)
  (binding_decl
    (binding_pattern
      (binding_introducer)
      (identifier))
    (map_literal))
  (single_line_comment)
  (binding_decl
    (binding_pattern
      (binding_introducer)
      (identifier))
    (map_literal
      (map_component
        (integer_literal
          (decimal_literal))
        (string_literal
          (simple_string)))
      (map_component
        (integer_literal
          (decimal_literal))
        (string_literal
          (simple_string)))))
  (single_line_comment)
  (binding_decl
    (binding_pattern
      (binding_introducer)
      (identifier))
    (map_literal
      (map_component
        (integer_literal
          (decimal_literal))
        (string_literal
          (simple_string)))
      (map_component
        (floating_point_literal)
        (string_literal
          (simple_string)))))
  (single_line_comment)
  (binding_decl
    (binding_pattern
      (binding_introducer)
      (identifier)
      (name_type_expr
        (selector
          (identifier_expr
            (identifier))
          (static_argument_list
            (static_argument
              (name_type_expr
                (selector
                  (identifier_expr
                    (identifier)))))
            (static_argument
              (name_type_expr
                (selector
                  (identifier_expr
                    (identifier)))))))))
    (map_literal
      (map_component
        (integer_literal
          (decimal_literal))
        (string_literal
          (simple_string)))
      (map_component
        (floating_point_literal)
        (string_literal
          (simple_string)))))
  (single_line_comment)
  (binding_decl
    (binding_pattern
      (binding_introducer)
      (identifier)
      (name_type_expr
        (selector
          (identifier_expr
            (identifier))
          (static_argument_list
            (static_argument
              (name_type_expr
                (selector
                  (identifier_expr
                    (identifier)))))
            (static_argument
              (name_type_expr
                (selector
                  (identifier_expr
                    (identifier)))))))))
    (map_literal))
  (single_line_comment))
