test/corpus/factorial.txt
=============
Factorial
=============

/// Computes the factorial of `n`.
///
/// - Requires: `n` must be greater or equal to 0.
fun factorial(_ n: Int) -> Int {
  if n < 2 { 1 } else { n * factorial(n - 1) }
}

public fun main() {
  let _ = factorial(6)
}

---

(source_file
  (single_line_comment)
  (single_line_comment)
  (single_line_comment)
  (function_decl
    (function_head
      (function_name
        (identifier)))
    (function_signature
      (parameter_decl
        (identifier)
        (name_type_expr
          (selector
            (identifier_expr
              (identifier)))))
      (name_type_expr
        (selector
          (identifier_expr
            (identifier)))))
    (brace_stmt
      (stmt
        (conditional_expr
          (conditional_clause_item
            (infix_expr
              (value_member_expr
                (selector
                  (identifier_expr
                    (identifier))))
              (infix_operator_tail
                (infix_operator)
                (integer_literal
                  (decimal_literal)))))
          (brace_stmt
            (stmt
              (integer_literal
                (decimal_literal))))
          (brace_stmt
            (stmt
              (infix_expr
                (value_member_expr
                  (selector
                    (identifier_expr
                      (identifier))))
                (infix_operator_tail
                  (infix_operator)
                  (function_call_expr
                    (value_member_expr
                      (selector
                        (identifier_expr
                          (identifier))))
                    (call_argument
                      (infix_expr
                        (value_member_expr
                          (selector
                            (identifier_expr
                              (identifier))))
                        (infix_operator_tail
                          (infix_operator)
                          (integer_literal
                            (decimal_literal))))))))))))))
  (function_decl
    (function_head
      (access_modifier)
      (function_name
        (identifier)))
    (function_signature)
    (brace_stmt
      (stmt
        (binding_decl
          (binding_pattern
            (binding_introducer)
            (wildcard_pattern))
          (function_call_expr
            (value_member_expr
              (selector
                (identifier_expr
                  (identifier))))
            (call_argument
              (integer_literal
                (decimal_literal)))))))))
