test/corpus/grammar_rules/entities.txt
===========
Entities
===========

let a = m.f(t: 5) // function call
let b = m.f(t:) // not a function call!
let c = m.prefix-*(5, 7)

---

(source_file
  (binding_decl
    (binding_pattern
      (binding_introducer)
      (identifier))
    (expr
      (function_call_expr
        (value_member_expr
          (value_member_expr
            (selector
              (identifier_expr
                (identifier))))
          (selector
            (identifier_expr
              (identifier))))
        (call_argument
          (identifier)
          (expr
            (integer_literal
              (decimal_literal)))))))
  (single_line_comment)
  (binding_decl
    (binding_pattern
      (binding_introducer)
      (identifier))
    (expr
      (value_member_expr
        (value_member_expr
          (selector
            (identifier_expr
              (identifier))))
        (selector
          (identifier_expr
            (function_entity_identifier
              (identifier)
              (identifier)))))))
  (single_line_comment)
  (binding_decl
    (binding_pattern
      (binding_introducer)
      (identifier))
    (expr
      (function_call_expr
        (value_member_expr
          (value_member_expr
            (selector
              (identifier_expr
                (identifier))))
          (selector
            (identifier_expr
              (operator_entity_identifier
                (operator_notation)
                (operator)))))
        (call_argument
          (expr
            (integer_literal
              (decimal_literal))))
        (call_argument
          (expr
            (integer_literal
              (decimal_literal))))))))
