test/corpus/hello.txt
=============
Hello World!
=============

public fun main() {
  print("Hello, World!")
}

---

(source_file
  (function_decl
    (function_head
      (access_modifier)
      (function_name
        (identifier)))
    (function_signature)
    (brace_stmt
      (stmt
        (function_call_expr
          (value_member_expr
            (selector
              (identifier_expr
                (identifier))))
          (call_argument
            (string_literal
              (simple_string))))))))
